--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="origin-trial" content="TOKEN_GOES_HERE">
 
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <link
