--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <link
       rel="preload"
-      href="https://uploads.codesandbox.io/uploads/user/f7fdc300-3c43-44c1-9a59-4338a82a9954/_oPE-FG_Virgil.ttf"
+      href="https://uploads.codesandbox.io/uploads/user/f7fdc300-3c43-44c1-9a59-4338a82a9954/xhjR-FG_Virgil.ttf"
       as="font"
       type="font/ttf"
       crossorigin="anonymous"
@@ -23,12 +23,12 @@
       src="https://www.googletagmanager.com/gtag/js?id=UA-387204-13"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || []
       function gtag() {
-        dataLayer.push(arguments);
+        dataLayer.push(arguments)
       }
-      gtag("js", new Date());
-      gtag("config", "UA-387204-13");
+      gtag("js", new Date())
+      gtag("config", "UA-387204-13")
     </script>
   </head>
 
