refactor: remove twitter meta in favor of og:image

--- a/public/index.html
+++ b/public/index.html
@@ -23,16 +23,10 @@
       property="og:description"
       content="Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
-
-    <!-- Twitter Card tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Vjeux" />
-    <meta name="twitter:creator" content="@Vjeux" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.png" />
     <meta
-      name="twitter:image:alt"
-      content="Excalidraw: Sketch hand-drawn like diagrams."
+      property="og:image"
+      name="twitter:image"
+      content="%PUBLIC_URL%/og-image.png"
     />
 
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
