--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
       name="twitter:image"
       content="%PUBLIC_URL%/og-image.png"
     />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="669" />
 
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <link
