--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       name="description"
       content="Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
     />
-    <meta name="image" content="%PUBLIC_URL%/og-image.png" />
+    <meta name="image" content="https://www.excalidraw.com/og-image.png" />
 
     <!-- OpenGraph tags -->
     <meta property="og:url" content="https://www.excalidraw.com/" />
