fix: add twitter card tags

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="669" />
 
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Vjeux" />
+    <meta name="twitter:creator" content="@Vjeux" />
+
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <link
       rel="preload"
