--- a/public/index.html
+++ b/public/index.html
@@ -26,15 +26,15 @@
     <meta
       property="og:image"
       name="twitter:image"
-      content="%PUBLIC_URL%/og-image.png"
+      content="https://www.excalidraw.com/og-image.pngg"
     />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="669" />
 
     <!-- Twitter Card tags -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Vjeux" />
-    <meta name="twitter:creator" content="@Vjeux" />
+    <meta name="twitter:creator" content="@Vjeux" /> -->
 
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <link
