fix: add twitter card tags again

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <!-- General tags -->
     <meta
       name="description"
       content="Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
@@ -32,9 +33,17 @@
     <meta property="og:image:height" content="669" />
 
     <!-- Twitter Card tags -->
-    <!-- <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Vjeux" />
-    <meta name="twitter:creator" content="@Vjeux" /> -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@Vjeux" />
+    <meta name="twitter:title" content="Excalidraw" />
+    <meta
+      name="twitter:description"
+      content="Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.excalidraw.com/og-image.png"
+    />
 
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <link
