--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <meta
       property="og:image"
       name="twitter:image"
-      content="https://excalidraw.com/og-image.pngg"
+      content="https://excalidraw.com/og-image.png"
     />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="669" />
