--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="image" content="https://excalidraw.com/og-image.png" />
 
     <!-- OpenGraph tags -->
-    <meta property="og:url" content="https://excalidraw.com/" />
+    <meta property="og:url" content="https://excalidraw.com" />
     <meta property="og:site_name" content="Excalidraw" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Excalidraw" />
