Switch code font + format and save 150kb

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     />
     <link
       rel="preload"
-      href="%PUBLIC_URL%/Cascadia.ttf"
+      href="%PUBLIC_URL%/VictorMono-Medium.woff2"
       as="font"
       type="font/ttf"
       crossorigin="anonymous"
