--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,9 @@
       crossorigin="anonymous"
     />
 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/launch.png" />
+
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-387204-13"
