--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,16 @@
     <meta
       property="og:image"
       name="twitter:image"
+      content="http://www.excalidraw.com/og-image.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      name="twitter:image"
       content="https://www.excalidraw.com/og-image.png"
     />
-    <meta property="og:image:width" content="1280" />
-    <meta property="og:image:height" content="669" />
+    <meta property="og:image:width" content="592" />
+    <meta property="og:image:height" content="250" />
+    <meta property="og:image:alt" content="Excalidraw logo with byline." />
 
     <!-- Chrome -->
     <meta name="theme-color" content="#FFFF" />
