--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@
     <meta
       property="og:image"
       name="twitter:image"
-      content="http://www.excalidraw.com/og-image.png"
+      content="https://excalidraw.com/og-image.png"
     />
     <meta
       property="og:image:secure_url"
       name="twitter:image"
-      content="https://www.excalidraw.com/og-image.png"
+      content="https://excalidraw.com/og-image.png"
     />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="669" />
@@ -62,7 +62,7 @@
     <!-- OG tags require absolute url for images -->
     <meta
       name="twitter:image"
-      content="https://www.excalidraw.com/og-image.png"
+      content="https://excalidraw.com/og-image.png"
     />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
