--- a/public/index.html
+++ b/public/index.html
@@ -60,10 +60,7 @@
       content="Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
     />
     <!-- OG tags require absolute url for images -->
-    <meta
-      name="twitter:image"
-      content="https://excalidraw.com/og-image.png"
-    />
+    <meta name="twitter:image" content="https://excalidraw.com/og-image.png" />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="fonts.css" />
