--- a/public/index.html
+++ b/public/index.html
@@ -148,10 +148,14 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <header>
-      <h1 class="visually-hidden">Excalidraw</h1>
-    </header>
-    <div id="root"></div>
+
+    <div id="root">
+      <!-- Placeholder -->
+      <header>
+        <h1 class="visually-hidden">Excalidraw</h1>
+      </header>
+    </div>
+
     <aside>
       <!-- https://github.com/tholman/github-corners -->
       <svg
