--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,7 @@
       }
       .LoadingMessage span {
         background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 5px;
         padding: 0.8em 1.2em;
         font-size: 1.3em;
       }
