use square icon

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     />
     <meta name="referrer" content="origin" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
 
     <meta name="theme-color" content="#000000" />
 
