--- a/public/index.html
+++ b/public/index.html
@@ -65,17 +65,17 @@
     <!-- OG tags require absolute url for images -->
     <meta name="twitter:image" content="https://excalidraw.com/og-image.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="static/css/fonts.css" type="text/css" />
+    <link rel="stylesheet" href="fonts.css" type="text/css" />
     <link
       rel="preload"
-      href="static/fonts/FG_Virgil.woff2"
+      href="FG_Virgil.woff2"
       as="font"
       type="font/woff2"
       crossorigin="anonymous"
     />
     <link
       rel="preload"
-      href="static/fonts/Cascadia.woff2"
+      href="Cascadia.woff2"
       as="font"
       type="font/woff2"
       crossorigin="anonymous"
