Fix CSS, use custom splash screen font

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,11 @@
       crossorigin="anonymous"
     />
 
-    <link rel="manifest" href="manifest.json" />
+    <link
+      rel="manifest"
+      href="manifest.json"
+      style="--pwacompat-splash-font: 24px Virgil;"
+    />
 
     <style>
       .LoadingMessage {
