--- a/public/index.html
+++ b/public/index.html
@@ -95,23 +95,10 @@
     />
 
     <style>
-      .LoadingMessage {
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 999;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        pointer-events: none;
-      }
-      .LoadingMessage span {
-        background-color: rgba(255, 255, 255, 0.8);
-        border-radius: 5px;
-        padding: 0.8em 1.2em;
-        font-size: 1.3em;
+      body {
+        margin: 0;
+        width: 100vw;
+        height: 100vh;
       }
       .visually-hidden {
         position: absolute !important;
